# mindose

./: .gitignore  Makefile  README.md  common.h  main.c  meson.build  spec.md
apps/: meson.build
apps/calculator/: main.c  meson.build
apps/clock/: main.c  meson.build
apps/controlpanel/: main.c  meson.build
apps/filemanager/: main.c  meson.build
apps/minesweeper/: main.c  meson.build
apps/notepad/: main.c  meson.build
apps/paint/: main.c  meson.build
apps/terminal/: main.c  meson.build
fs/: filesystem.c  filesystem.h  meson.build
gui/: gui.c  gui.h  meson.build
kernel/: kernel.c  kernel.h  meson.build
process/: app_loader.c  app_loader.h  meson.build  process_manager.c  process_manager.h
resource/: meson.build  resource.c  resource.h
